--- a/project/data-exploration.ipynb
+++ b/project/data-exploration.ipynb
@@ -24,7 +24,11 @@
     "\n",
     "    - data dict (types, e.g. nominal, categorial) -> provided by user!\n",
     "    - bar/mosaic (categorial, deviation) -> custom transfromer to change dtype based on data dict.\n",
-    "    -> These require some mapping based on domain knowledge.\n"
+    "    -> These require some mapping based on domain knowledge.\n",
+    "\n",
+    "\n",
+    "    casual, registered, count\n",
+    "    - multicolinearitaet (vif) -> for temp, atemp"
    ]
   },
   {
