--- a/project/modeling-optimization.ipynb
+++ b/project/modeling-optimization.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TODO\n",
+    "\n",
+    "- data split (cv)\n",
+    "- r2\n",
+    "- adj_r2 \n",
+    "- rmse \n",
+    "- mae \n",
+    "- mse \n",
+    "- z-score \n",
+    "- p-value"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
