--- a/project/task_1.ipynb
+++ b/project/task_1.ipynb
@@ -246,13 +246,13 @@
     }
    ],
    "source": [
-    "data_train = pd.read_csv(\"../data/BikeRentalDaily_train.csv\", sep=\";\", index_col=0).sort_index()\n",
+    "data_train = pd.read_csv(\"../data/BikeRentalDaily_train.csv\", sep=\";\", index_col=\"instant\").sort_index()\n",
     "data_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -446,13 +446,13 @@
        "18                     0       9         674   683  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_test = pd.read_csv(\"../data/BikeRentalDaily_test.csv\", sep=\";\", index_col=0).sort_index()\n",
+    "data_test = pd.read_csv(\"../data/BikeRentalDaily_test.csv\", sep=\";\", index_col=\"instant\").sort_index()\n",
     "data_test.head()"
    ]
   },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "16    int64   response    numeric discrete  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +772,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
        "cnt              4544.500000  5946.000000  53021.000000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1143,7 +1143,7 @@
        "Text(0.5, 1.0, 'Numeric Variables 1')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1250,23 +1250,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-6ac9c3713f1c465499c4ff05e884e800.vega-embed {\n",
+       "  #altair-viz-6ccf5f420e2a4c8792c738e4c2a2a92a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-6ac9c3713f1c465499c4ff05e884e800.vega-embed details,\n",
-       "  #altair-viz-6ac9c3713f1c465499c4ff05e884e800.vega-embed details summary {\n",
+       "  #altair-viz-6ccf5f420e2a4c8792c738e4c2a2a92a.vega-embed details,\n",
+       "  #altair-viz-6ccf5f420e2a4c8792c738e4c2a2a92a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-6ac9c3713f1c465499c4ff05e884e800\"></div>\n",
+       "<div id=\"altair-viz-6ccf5f420e2a4c8792c738e4c2a2a92a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-6ac9c3713f1c465499c4ff05e884e800\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-6ac9c3713f1c465499c4ff05e884e800\");\n",
+       "    if (outputDiv.id !== \"altair-viz-6ccf5f420e2a4c8792c738e4c2a2a92a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-6ccf5f420e2a4c8792c738e4c2a2a92a\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1426,23 +1426,23 @@
       "text/html": [
        "\n",
        "<style>\n",
-       "  #altair-viz-bab71b7351f44fb2b7761af1d5473f15.vega-embed {\n",
+       "  #altair-viz-0918aed519f74f68bfb1195dea367a4a.vega-embed {\n",
        "    width: 100%;\n",
        "    display: flex;\n",
        "  }\n",
        "\n",
-       "  #altair-viz-bab71b7351f44fb2b7761af1d5473f15.vega-embed details,\n",
-       "  #altair-viz-bab71b7351f44fb2b7761af1d5473f15.vega-embed details summary {\n",
+       "  #altair-viz-0918aed519f74f68bfb1195dea367a4a.vega-embed details,\n",
+       "  #altair-viz-0918aed519f74f68bfb1195dea367a4a.vega-embed details summary {\n",
        "    position: relative;\n",
        "  }\n",
        "</style>\n",
-       "<div id=\"altair-viz-bab71b7351f44fb2b7761af1d5473f15\"></div>\n",
+       "<div id=\"altair-viz-0918aed519f74f68bfb1195dea367a4a\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-bab71b7351f44fb2b7761af1d5473f15\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-bab71b7351f44fb2b7761af1d5473f15\");\n",
+       "    if (outputDiv.id !== \"altair-viz-0918aed519f74f68bfb1195dea367a4a\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-0918aed519f74f68bfb1195dea367a4a\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm/vega@5?noext\",\n",
@@ -1602,7 +1602,7 @@
   "kernelspec": {
    "display_name": "introduction-data-science",
    "language": "python",
-   "name": "python3"
+   "name": "introduction-data-science"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1614,7 +1614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
