added time based visualization

--- a/project/task_1_idstools.ipynb
+++ b/project/task_1_idstools.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,21 +78,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-06 01:34:07,612 [_idstools_data] [INFO] - Initializing TargetData object.\n",
-      "2024-02-06 01:34:07,612 [_helpers] [INFO] - Reading data from:\n",
+      "2024-02-06 01:54:31,888 [_idstools_data] [INFO] - Initializing TargetData object.\n",
+      "2024-02-06 01:54:31,890 [_helpers] [INFO] - Reading data from:\n",
       "/home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\n",
-      "2024-02-06 01:34:07,616 [_idstools_data] [INFO] - Using label: cnt\n",
-      "2024-02-06 01:34:07,617 [_idstools_data] [INFO] - Using index: instant\n",
-      "2024-02-06 01:34:07,617 [_idstools_data] [INFO] - Output path not provided.\n",
+      "2024-02-06 01:54:31,893 [_idstools_data] [INFO] - Using label: cnt\n",
+      "2024-02-06 01:54:31,894 [_idstools_data] [INFO] - Using index: instant\n",
+      "2024-02-06 01:54:31,894 [_idstools_data] [INFO] - Output path not provided.\n",
       "Using default output path: /home/davidrmn/Studies/introduction-data-science/results\n",
-      "2024-02-06 01:34:07,618 [_idstools_data] [INFO] - No environment name provided.\n",
+      "2024-02-06 01:54:31,895 [_idstools_data] [INFO] - No environment name provided.\n",
       "Using default environment name: SELF_EXECUTED\n",
-      "2024-02-06 01:34:07,618 [data_explorer] [INFO] - Initializing DataExplorer\n",
-      "2024-02-06 01:34:07,619 [data_explorer] [INFO] - Data loaded from /home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\n",
-      "2024-02-06 01:34:07,619 [data_explorer] [INFO] - Please provide a pipeline configuration.\n",
-      "2024-02-06 01:34:07,619 [data_preparation] [INFO] - Initializing DataPreparation\n",
-      "2024-02-06 01:34:07,620 [data_preparation] [INFO] - Data loaded from /home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv.\n",
-      "2024-02-06 01:34:07,620 [data_preparation] [INFO] - Please provide a pipeline configuration.\n"
+      "2024-02-06 01:54:31,895 [data_explorer] [INFO] - Initializing DataExplorer\n",
+      "2024-02-06 01:54:31,896 [data_explorer] [INFO] - Data loaded from /home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv\n",
+      "2024-02-06 01:54:31,896 [data_explorer] [INFO] - Please provide a pipeline configuration.\n",
+      "2024-02-06 01:54:31,897 [data_preparation] [INFO] - Initializing DataPreparation\n",
+      "2024-02-06 01:54:31,897 [data_preparation] [INFO] - Data loaded from /home/davidrmn/Studies/introduction-data-science/data/BikeRentalDaily_train.csv.\n",
+      "2024-02-06 01:54:31,897 [data_preparation] [INFO] - Please provide a pipeline configuration.\n"
      ]
     }
    ],
@@ -912,7 +912,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Outlier Barplots: 100%|██████████| 16/16 [00:00<00:00, 129804.38it/s]\n"
+      "Outlier Barplots: 100%|██████████| 16/16 [00:00<00:00, 145888.83it/s]\n"
      ]
     }
    ],
@@ -957,7 +957,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Distribution Plots: 100%|██████████| 16/16 [00:00<00:00, 10824.01it/s]\n"
+      "Distribution Plots: 100%|██████████| 16/16 [00:00<00:00, 10546.73it/s]\n"
      ]
     }
    ],
@@ -1318,7 +1318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scatter Plots: 100%|██████████| 16/16 [00:00<00:00, 164080.35it/s]\n"
+      "Scatter Plots: 100%|██████████| 16/16 [00:00<00:00, 102927.71it/s]\n"
      ]
     }
    ],
@@ -1345,6 +1345,76 @@
    ],
    "source": [
     "explorer.figures[\"scatter_plots\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Time based Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we have a date feature in our data we can also visualize the data over time. This could give us also information about when the outliers or missing values appeared.\n",
+    "\n",
+    "Before we can start we need to convert the `dteday` feature into `datetime64`.\n",
+    "\n",
+    "In the setup we also initialized a `data_preparation` object called `preparator`.\n",
+    "\n",
+    "We now use it to transform the feature to the right type."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preparator.pipeline = configuration_preparation_pipeline_task1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Box: {'func': 'target_to_datetime', 'module': 'idstools._custom_transformer', 'config': {'target': 'dteday', 'format': '%d.%m.%Y'}}>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preparator.pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-06 01:56:07,165 [data_preparation] [ERROR] - Error in build_pipeline: name 'func' is not defined\n",
+      "2024-02-06 01:56:07,166 [data_preparation] [ERROR] - Error in run_pipeline: 'NoneType' object has no attribute 'transform'\n",
+      "2024-02-06 01:56:07,167 [_helpers] [INFO] - Writing data to:\n",
+      "/home/davidrmn/Studies/introduction-data-science/results/SELF_EXECUTED_BikeRentalDaily_train_processed.csv\n",
+      "2024-02-06 01:56:07,170 [data_preparation] [INFO] - Processed data written to /home/davidrmn/Studies/introduction-data-science/results/SELF_EXECUTED_BikeRentalDaily_train_processed.csv.\n"
+     ]
+    }
+   ],
+   "source": [
+    "preparator.run()"
    ]
   },
   {
