Added Feature Coefficients Task 2

--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "Index([197, 155, 236], dtype='int64', name='instant')"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,19 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-13 {color: black;}#sk-container-id-13 pre{padding: 0;}#sk-container-id-13 div.sk-toggleable {background-color: white;}#sk-container-id-13 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-13 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-13 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-13 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-13 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-13 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-13 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-13 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-13 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-13 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-13 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-13 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-13 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-13 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-13 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-13 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-13 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-13 div.sk-item {position: relative;z-index: 1;}#sk-container-id-13 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-13 div.sk-item::before, #sk-container-id-13 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-13 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-13 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-13 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-13 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-13 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-13 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-13 div.sk-label-container {text-align: center;}#sk-container-id-13 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-13 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-13\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-13\" type=\"checkbox\" checked><label for=\"sk-estimator-id-13\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LinearRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LinearRegression</label><div class=\"sk-toggleable__content\"><pre>LinearRegression()</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LinearRegression()"
       ]
      },
-     "execution_count": 434,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -241,6 +241,36 @@
     "\n",
     "print(f'R2 Score: {r2}')\n",
     "print(f'Mean Absolute Error: {mae}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "season 418.35\n",
+      "yr 2571.41\n",
+      "mnth 5.51\n",
+      "holiday 799.24\n",
+      "weekday 220.87\n",
+      "workingday 669.7\n",
+      "weathersit 728.5\n",
+      "temp 4.79\n",
+      "atemp 6823.38\n",
+      "hum 8.45\n",
+      "windspeed 2103.74\n",
+      "leaflets 1.16\n",
+      "price reduction 387.48\n"
+     ]
+    }
+   ],
+   "source": [
+    "for coef, feature in zip(reg.coef_, X.columns):\n",
+    "    print(feature, abs(round(coef, 2)))"
    ]
   },
   {
@@ -270,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +318,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 438,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -319,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +716,7 @@
        "[600 rows x 17 columns]"
       ]
      },
-     "execution_count": 440,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +756,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 442,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -761,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +800,7 @@
        "Index([197, 155, 224, 236], dtype='int64', name='instant')"
       ]
      },
-     "execution_count": 443,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 21,
    "metadata": {
     "scrolled": false
    },
@@ -830,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -884,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1085,7 @@
        "624                    0   30378        5554  35932  "
       ]
      },
-     "execution_count": 447,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1111,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1512,7 +1542,7 @@
        "[592 rows x 25 columns]"
       ]
      },
-     "execution_count": 450,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1530,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,9 +1570,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "introduction-data-science",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "introduction-data-science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1554,7 +1584,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
