--- a/project/task_1.ipynb
+++ b/project/task_1.ipynb
@@ -1613,7 +1613,7 @@
    "source": [
     "Die Variablen `temp` und `atemp` weisen eine stark positive lineare Beziehung auf (0,99). Die Variablen scheinen zusammenzuhängen und multikollinear zu sein. Aufgrund dessen sollten wir eine der beiden Variablen nicht für das weitere Vorgehen berücksichtigen.\n",
     "\n",
-    "Zusätzlich kann der Variance Inflation Factor (VIF) berechnet werden, um Multikollinearität zwischen verschiedenen Variablen innerhalb des Datensatzes zu identifizieren."
+    "Zusätzlich kann der Variance Inflation Factor (VIF) berechnet werden, um Multikollinearität zwischen verschiedenen Variablen innerhalb des Datensatzes zu identifizieren. Indem wir die Multikollinearität beheben bzw. reduzieren, können wir die Stabilität und Interpretierbarkeit unseres Modells verbessern."
    ]
   },
   {
@@ -1665,6 +1665,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "**Erkenntnisse:**\n",
+    "\n",
+    "- Ein VIF-Wert von 1 deutet darauf hin, dass keine Multikollinearität vorliegt.\n",
+    "- Ein VIF-Wert zwischen 1 und 5 deutet auf eine geringe bis moderate Multikollinearität hin und wird in der Regel als akzeptabel betrachtet. In unserem Fall weisen die meisten Variablen einen VIF-Wert im Bereich zwischen 1 und 3 auf, was auf eine geringe Multikollinearität schließen lässt.\n",
+    "- Ein VIF-Wert über 5 zeigt an, dass es wahrscheinlich eine erhebliche Multikollinearität gibt und die Variable möglicherweise aus dem Modell entfernt werden sollte. In unserem Fall weisen die Variablen `temp` und `atemp` hohe VIF-Werte auf, was auf eine starke Multikollinearität zwischen diesen beiden Variablen hindeutet. Unsere Vermutung bestätigt sich also. Die beiden Variablen sind sehr ähnlich und beinhalten möglicherweise redundante Informationen. Für den weiteren Verlauf sollte eine der beiden Variablen nicht weiter verwendet oder so transformiert werden, dass die Mulitkollinearität reduziert werden kann."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
@@ -1672,7 +1683,7 @@
   "kernelspec": {
    "display_name": "introduction-data-science",
    "language": "python",
-   "name": "introduction-data-science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1684,7 +1695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
