--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1565,6 +1565,126 @@
    "outputs": [],
    "source": [
     "data_d.to_csv(f\"../data/prepared_{file_to_prepare}.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Daten splitting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_m = data_d.drop(columns=[\"casual\", \"registered\", \"cnt\", \"dteday\"])\n",
+    "Y_m = data_d[\"cnt\"]\n",
+    "\n",
+    "Xt, Xv, Yt, Yv = train_test_split(X_m, Y_m, test_size=0.3, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Funktion gibt alle Feature Kombinationen aus."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "def get_feature_combinations(features):\n",
+    "    all_combinations = []\n",
+    "    for r in range(8, len(features) - 12):\n",
+    "        combinations = itertools.combinations(features, r)\n",
+    "        all_combinations.extend(combinations)\n",
+    "    print(len(all_combinations))\n",
+    "    return all_combinations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Durchläuft alle Kombinationen, r², mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "203490\n",
+      "203490\r"
+     ]
+    }
+   ],
+   "source": [
+    "all_features = X_m.columns.to_list()\n",
+    "result_models = pd.DataFrame(columns=[\"model\", \"features\", \"r2\", \"mae\"])\n",
+    "c = 0\n",
+    "for feature_c in get_feature_combinations(all_features):\n",
+    "    #feature_c = \n",
+    "    c+=1\n",
+    "    m = LinearRegression(n_jobs=14)\n",
+    "    m.fit(Xt.loc[:, feature_c], Yt)\n",
+    "    y_pred_m = m.predict(Xv.loc[:, feature_c])\n",
+    "    r2_m = r2_score(Yv, y_pred_m)\n",
+    "    mae_m = mean_absolute_error(Yv, y_pred_m)\n",
+    "    result_models.loc[len(result_models)] = [m, feature_c, r2_m, mae_m]\n",
+    "    print(c, end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Die Feature des besten Modells"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('season',\n",
+       " 'yr',\n",
+       " 'atemp',\n",
+       " 'weekday_0',\n",
+       " 'weekday_1',\n",
+       " 'weekday_2',\n",
+       " 'weathersit_1',\n",
+       " 'weathersit_3')"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_models.sort_values(\"mae\", ascending=True).iloc[0, 1]"
    ]
   }
  ],
