--- a/project/task_2.ipynb
+++ b/project/task_2.ipynb
@@ -1578,7 +1578,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Daten splitting"
+    "##### Data splitting\n",
+    "Der Datensatz wird in Trainings- und Testsets aufgeteilt. Die Spalten \"casual\", \"registered\", \"cnt\" und \"dteday\" werden aus dem Datensatz entfernt. Als abhängige Variable wird die Spalte \"cnt\" festgelegt. Dann erfolgt die Aufteilung in Trainings- und Testsets (Xt, Xv, Yt, Yv). Dabei werden 30% der Daten für das Testset verwendet."
    ]
   },
   {
@@ -1597,7 +1598,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Funktion gibt alle Feature Kombinationen aus."
+    "Eine Funktion, get_feature_combinations(features), wird definiert, um alle möglichen Kombinationen von Features aus einer gegebenen Feature-Liste zu generieren. Dabei werden Kombinationen von jeweils acht Features erstellt. Die generierte Liste wird zurückgegeben.\n",
+    "\n",
+    "Über die Anzahl der Features kann noch diskutiert werden."
    ]
   },
   {
@@ -1612,7 +1615,7 @@
     "    for r in range(8, len(features) - 12):\n",
     "        combinations = itertools.combinations(features, r)\n",
     "        all_combinations.extend(combinations)\n",
-    "    print(len(all_combinations))\n",
+    "    print(\"Total amount of combinations:\", len(all_combinations))\n",
     "    return all_combinations"
    ]
   },
@@ -1620,7 +1623,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Durchläuft alle Kombinationen, r², mae"
+    "Alle Merkmale werden als Liste von X_m-Spalten aufgeführt. Für jede Merkmalskombination wird ein lineares Regressionsmodell erstellt und ausgewertet. Die Ergebnisse werden in das result_models DataFrame eingetragen."
    ]
   },
   {
@@ -1638,26 +1641,28 @@
     }
    ],
    "source": [
-    "all_features = X_m.columns.to_list()\n",
-    "result_models = pd.DataFrame(columns=[\"model\", \"features\", \"r2\", \"mae\"])\n",
-    "c = 0\n",
-    "for feature_c in get_feature_combinations(all_features):\n",
-    "    #feature_c = \n",
-    "    c+=1\n",
-    "    m = LinearRegression(n_jobs=14)\n",
-    "    m.fit(Xt.loc[:, feature_c], Yt)\n",
-    "    y_pred_m = m.predict(Xv.loc[:, feature_c])\n",
-    "    r2_m = r2_score(Yv, y_pred_m)\n",
-    "    mae_m = mean_absolute_error(Yv, y_pred_m)\n",
-    "    result_models.loc[len(result_models)] = [m, feature_c, r2_m, mae_m]\n",
-    "    print(c, end='\\r')"
+    "# Takes 45 minutes to run\n",
+    "\n",
+    "# all_features = X_m.columns.to_list()\n",
+    "# result_models = pd.DataFrame(columns=[\"model\", \"features\", \"r2\", \"mae\"])\n",
+    "# c = 0\n",
+    "# for feature_c in get_feature_combinations(all_features): \n",
+    "#     c+=1\n",
+    "#     m = LinearRegression(n_jobs=14)\n",
+    "#     m.fit(Xt.loc[:, feature_c], Yt)\n",
+    "#     y_pred_m = m.predict(Xv.loc[:, feature_c])\n",
+    "#     r2_m = r2_score(Yv, y_pred_m)\n",
+    "#     mae_m = mean_absolute_error(Yv, y_pred_m)\n",
+    "#     result_models.loc[len(result_models)] = [m, feature_c, r2_m, mae_m]\n",
+    "#     print(c, end='\\r')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Feature des besten Modells"
+    "##### Features des besten Modells\n",
+    "Die Merkmalskombination mit dem geringsten mittleren absoluten Fehler (MAE) in den resultierenden Modellen wird zurückgegeben, nachdem die result_models-Tabelle nach dem \"MAE\" aufsteigend sortiert wurde."
    ]
   },
   {
@@ -1685,6 +1690,45 @@
    ],
    "source": [
     "result_models.sort_values(\"mae\", ascending=True).iloc[0, 1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Erkenntnisse:\n",
+    "- Die gefühlte Temperatur ist ausschlaggebender, als die tatsächliche Temperatur\n",
+    "- Ob ein Tag ein Werk- bzw. Feiertag ist, ist nicht statistisch relevant, obwohl es logisch wäre\n",
+    "- Im Folgejahr gibt es täglich durchschnittlich 2000 Nutzer mehr, als im Erstjahr (Coefficient: 1985)\n",
+    "- Die Preisreduktion hat keinen bedeutenden Einfluss auf die Nutzerzahl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Feature Coefficients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  391.97998684,  1985.32170625,  5992.09639689,  -318.90025148,\n",
+       "        -272.31899927,  -186.68645597,   614.49034816, -1945.81824168])"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_models.sort_values(\"mae\", ascending=True).iloc[0, 0].coef_"
    ]
   }
  ],
